--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "npm.packageManager": "yarn"
+  "npm.packageManager": "yarn",
+  "i18n-ally.localesPaths": [
+    "src/lang",
+    "src/views/use-example/i18n"
+  ]
 }
