--- a/.env.build
+++ b/.env.build
@@ -1,7 +1,7 @@
 VITE_APP_ENV = 'prod'
 #自动获取地址推荐
 #VITE_APP_BASE_URL = '/micro-service-api'
-VITE_APP_BASE_URL = 'http://8.135.1.141/micro-service-api'
+VITE_APP_BASE_URL = 'http://localhost:8000/api/v1'
 VITE_APP_BASE_WS_URL = ''
 
 #image or oss address
