--- a/.env.build-test
+++ b/.env.build-test
@@ -1,7 +1,7 @@
 VITE_APP_ENV = 'test'
 #自动获取地址推荐
 #VITE_APP_BASE_URL = '/micro-service-api'
-VITE_APP_BASE_URL = 'http://8.135.1.141/micro-service-api'
+VITE_APP_BASE_URL = 'http://61.160.200.234:8000/api/v1'
 VITE_APP_BASE_WS_URL = ''
 
 #image or oss address
