--- a/.env.serve-test
+++ b/.env.serve-test
@@ -1,6 +1,6 @@
 #The defined variable must start with VITE_APP_
 VITE_APP_ENV = 'test'
-VITE_APP_BASE_URL = 'http://localhost:20156/api'
+VITE_APP_BASE_URL = 'http://61.160.200.234:8000/api/v1'
 
   #image or oss address
 VITE_APP_IMAGE_URL = 'http://8.135.1.141:8080'
