--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "prepare": "husky install",
     "tsc-check": "tsc"
   },
-  "peerDependencies": {
-    "vue": "3.2.26"
-  },
   "dependencies": {
-    "@element-plus/icons-vue": "0.2.4",
+    "@element-plus/icons": "^0.0.11",
+    "@element-plus/icons-vue": "^1.0.0",
     "axios": "0.21.3",
+    "d3": "7.2.1",
     "echarts": "4.2.1",
     "element-china-area-data": "5.0.2",
-    "element-plus": "2.0.1",
+    "element-plus": "2.0.2",
+    "js-base64": "^3.7.2",
     "mitt": "3.0.0",
     "moment-mini": "2.24.0",
     "nprogress": "0.2.0",
@@ -29,11 +29,10 @@
     "path-to-regexp": "^6.2.0",
     "screenfull": "4.2.0",
     "tinymce": "4.9.11",
-    "vue": "3.2.29",
-    "vue-i18n": "9.1.6",
+    "vue": "^3.2.29",
+    "vue-i18n": "^9.1.6",
     "vue-router": "4.0.12",
-    "vuex": "4.0.2",
-    "d3": "7.2.1"
+    "vuex": "4.0.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.16.3",
